<resources>
    <string name="app_name">Object-Box Workshop</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="add_person">Add Person</string>
    <string name="edit_person">Edit Person</string>
    <string name="action_save">Save</string>
    <string name="empty_list">There is no one</string>
    <string name="empty_name">The name shouldn`t be empty</string>
    <string name="invalid_age">The age shouldn`t be less then 0</string>
    <string name="menu_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="hint_id">Identifier</string>
    <string name="hint_period">Period</string>
    <string name="hint_period_start">Start</string>
    <string name="hint_period_end">End</string>
    <string name="menu_close">Close</string>
    <string name="menu_delete">Delete</string>
</resources>
