<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
            android:id="@+id/delete"
            android:title="@string/menu_delete"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            android:visible="false"
            app:showAsAction="ifRoom"
            tools:visible="true"/>
    <item
            android:id="@+id/filter"
            android:title="@string/menu_filter"
            android:icon="@drawable/ic_filter_list_black_24dp"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/close"
            android:title="@string/menu_close"
            android:icon="@drawable/ic_close_black_24dp"
            android:visible="false"
            app:showAsAction="ifRoom"
            tools:visible="true"/>
</menu>